# Habid

./: GeneratedFiles.txt  HeaderList.txt  README.md  SConstruct  test.d  test.txt
classflattener/: ClassFlattener.cbp  InterfaceFile.xml  hello.d
hcb/: CMakeLists.txt  template.txt
hcb/include/: bec-types.h  hcb-types.h
hcb/include/app/: HCB_Looper.h  HCB_Message.h  HCB_MessageQueue.h
hcb/include/storage/: HCB_Directory.h  HCB_Entry.h
hcb/include/support/: HCB_DataIO.h  HCB_Flattenable.h  HCB_Locker.h  HCB_StopWatch.h
hcb/src/app/: Looper.cpp  Message.cpp  MessageQueue.cpp  Messenger.cpp
hcb/src/storage/: Mime.cpp  MimeType.cpp  Resources.cpp  Statable.cpp
hcb/src/support/: DataIO.cpp  DataIO_BMallocIO.cpp  DataIO_BMemoryIO.cpp  Flattenable.cpp  List.cpp  Locker.cpp  String.cpp
hdb/: CMakeLists.txt
templates/: CHeaderTemplate.h  CSourceTemplate.c  ClassWithPureVirtuals.md  ClassWithVirtuals.md  ClassWithoutVirtuals.md  DSourceTemplate.d
trunk/: HeaderList.txt  SConstruct  build-test.sh  test.d
trunk/hdb/: CMakeLists.txt
trunk/hdb/src/App/: Looper.d  Message.d  MessageQueue.d  Messenger.d
trunk/hdb/src/Interface/: Bitmap.d
trunk/hdb/src/Kernel/: OS.d  image.d
trunk/hdb/src/Storage/: Directory.d  Entry.d  EntryList.d  Mime.d  MimeType.d  Node.d  Path.d  Resources.d  Statable.d  StorageDefs.d  Volume.d
trunk/hdb/src/Support/: BObject.d  DataIO.d  Flattenable.d  HelperFunctions.d  List.d  StopWatch.d  String.d  types.d
wiki/: CHeaderTemplate.wiki  CSourceTemplate.wiki  ClassWithPureVirtuals.wiki  ClassWithVirtuals.wiki  DSourceTemplate.wiki  (+1 more)
(+422 files in other folders)
